# BSU-2nd-year

./: CMakeLists.txt  README.md  kolok1.cpp  kolok1.h
kolok3/: CMakeLists.txt  kolok3.cpp  kolok3.h  main.cpp  test_kolok3.cpp
kolokvium_Zalutskaya/: Dockerfile  docker-compose.yml  readme.md  requirements.txt  run.py  run_kitty.py  test_todo.db
kolokvium_Zalutskaya/app/: config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
kolokvium_Zalutskaya/app/static/css/: kitty-theme.css
kolokvium_Zalutskaya/app/templates/: kitty-home.html
kolokvium_Zalutskaya/data/: kitty_tasks.db
kolokvium_Zalutskaya/tests/: conftest.py  test_tasks.py
lab 1/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  cmake_install.cmake  employee  main  test_program  zapusk.txt
lab 1/apps/: CMakeLists.txt  cmake_install.cmake
lab 1/apps/creator/: creator.cpp
lab 1/apps/main_app/: main_app  main_app.cpp
lab 1/apps/main_app/main_app.dSYM/Contents/Resources/DWARF/: main_app
lab 1/apps/main_app/main_app.dSYM/Contents/Resources/Relocations/aarch64/: main_app.yml
lab 1/core/: CMakeLists.txt  cmake_install.cmake  employee.cpp  employee.h  file_utils.h
lab 1/tests/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
lab 1/tests/e2e/: test_e2e.cpp
lab 1/tests/unit/: run_tests  test_creator.cpp  test_employee.cpp  test_main_app.cpp  test_reporter.cpp
lab 1/tests/unit/run_tests.dSYM/Contents/Resources/DWARF/: run_tests
lab 1/tests/unit/run_tests.dSYM/Contents/Resources/Relocations/aarch64/: run_tests.yml
lab2/: CMakeLists.txt  DataManager.cpp  DataManager.h  DataProcessor.cpp  DataProcessor.h  README.md  ThreadController.cpp  ThreadController.h  ThreadManager.cpp  ThreadManager.h  main.cpp  test_main.cpp
lab4/: CMakeLists.txt  common.h  receiver.cpp  sender.cpp  test_main.cpp
lab5/: CMakeLists.txt  readme.md  run_client.sh
lab5/include/: employee_types.h  fifo_manager.h  file_manager.h  lock_manager.h  logger.h
lab5/src/: client.cpp  fifo_manager.cpp  file_manager.cpp  lock_manager.cpp  logger.cpp  server.cpp
lab5/tests/: CMakeLists.txt  demo_test.cpp  main.cpp  test_employee_types.cpp  test_fifo_manager.cpp  test_file_manager.cpp  test_integration.cpp  test_lock_manager.cpp
laba3/: CMakeLists.txt  lab3  readme.md
laba3/include/: ArrayManager.h  Constants.h  PlatformSync.h  ThreadManager.h
laba3/src/: ArrayManager.cpp  PlatformSync.cpp  ThreadManager.cpp  main.cpp
laba3/test/: ArrayManagerTest.cpp  IntegrationTest.cpp  PlatformSyncTest.cpp  ThreadManagerTest.cpp
oc/lab 1/: creator.cpp  employee.h  main.cpp  reporter.cpp  test_creator.cpp  test_main.cpp  test_reporter.cpp
колок/: CMakeLists.txt  README.md  kolok1  kolok1_gtest.cpp
колок2/: CMakeLists.txt  README.md  kolok2.cpp  kolok2.h  main.cpp  test_kolok2.cpp
